--- a/Travel_history.html
+++ b/Travel_history.html
@@ -5,131 +5,282 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel History and Analysis</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f8fb;
+        /* Base Variables */
+        :root {
+            --primary: #2d3436;
+            --secondary: #0984e3;
+            --accent: #00cec9;
+            --background: #1a1a2e;
+            --card-bg: #1e272e;
+            --text-primary: #dfe6e9;
+            --text-secondary: #b2bec3;
+            --gradient-start: #6c5ce7;
+            --gradient-end: #00cec9;
+        }
+
+        /* Base Styles */
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
-            color: #333;
         }
 
-        header {
-            background-color: #2a628f;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
+        body {
             margin: 0;
-            font-size: 2.5em;
-            letter-spacing: 1px;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+            font-family: 'Inter', system-ui, sans-serif;
+            color: var(--text-primary);
+            background-color: var(--background);
+            line-height: 1.6;
         }
 
         .container {
             max-width: 1200px;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 0 auto;
+            padding: 0 2rem;
         }
 
-        .container:hover {
-            transform: scale(1.02);
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        /* Header Styles */
+        .main-header {
+            background: rgba(30, 39, 46, 0.95);
+            backdrop-filter: blur(10px);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 100;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
         }
 
-        h2 {
-            color: #f4419a;
-            font-size: 1.8em;
-            border-bottom: 2px solid #eaeaea;
-            padding-bottom: 10px;
-            margin-top: 20px;
-            text-transform: uppercase;
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 0;
         }
 
-        p {
-            line-height: 1.6;
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 15px;
-            transition: color 0.3s ease;
+        .logo {
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            transition: transform 0.3s ease;
         }
 
-        p:hover {
-            color: #222;
+        .logo:hover {
+            transform: scale(1.05);
         }
 
-        footer {
-            text-align: center;
-            padding: 15px;
-            background-color: #2a628f;
-            color: white;
-            margin-top: 50px;
-            border-radius: 10px;
-            box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+        /* Navigation */
+        .main-nav {
+            display: flex;
+            gap: 2rem;
         }
 
-        footer a {
-            color: #fff;
+        .nav-link {
+            color: var(--text-secondary);
             text-decoration: none;
-            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            transition: all 0.3s ease;
         }
 
-        footer a:hover {
-            text-decoration: underline;
+        .nav-link:hover {
+            color: var(--text-primary);
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .icon {
+            width: 20px;
+            height: 20px;
+        }
+
+        /* Page Specific Styles */
+        main {
+            padding-top: 100px;
         }
 
         .use-case {
-            margin-bottom: 30px;
-            transition: transform 0.3s ease, background-color 0.3s ease;
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 2rem;
+            margin-bottom: 2rem;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .use-case:hover {
-            transform: translateY(-10px);
-            background-color: #f9f9f9;
+            transform: translateY(-4px);
+            box-shadow: 0 12px 48px rgba(0, 0, 0, 0.2);
+        }
+
+        .use-case h2 {
+            color: var(--accent);
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .use-case p {
+            margin-bottom: 1rem;
+        }
+
+        .use-case strong {
+            color: var(--accent);
+        }
+
+        footer {
+            background: var(--card-bg);
+            padding: 2rem 0;
+            margin-top: 4rem;
+            text-align: center;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        footer a {
+            color: var(--accent);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: var(--gradient-end);
+        }
+
+        .fade-in {
+            animation: fadeIn 0.6s ease forwards;
+            opacity: 0;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @media (max-width: 768px) {
+            .header-content {
+                flex-direction: column;
+                gap: 1rem;
+            }
+            
+            .main-nav {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
         }
     </style>
 </head>
 <body>
+    <header class="main-header">
+        <div class="container">
+            <div class="header-content">
+                <h1 class="logo">TEAM 4</h1>
+                <nav class="main-nav">
+                    <a href="https://github.com/sachidanand-A/urban_navigation_and_safety-/blob/main" class="nav-link">
+                        <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                        </svg>
+                        Github
+                    </a>
+                    <a href="index.html" class="nav-link">
+                        <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                        </svg>
+                        Overview
+                    </a>
+                    <a href="businesscases.html" class="nav-link">
+                        <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                        </svg>
+                        Use Cases
+                    </a>
+                    <a href="reflections_team.html" class="nav-link">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M15 14c.2-1 .7-1.7 1.5-2.5M9 14c-.2-1-.7-1.7-1.5-2.5M6 9h.01M18 9h.01"></path>
+                            <path d="M12 2a8 8 0 0 0-8 8v1a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4v-1a8 8 0 0 0-8-8z"></path>
+                            <path d="M9.1 16.3a2.8 2.8 0 0 0 5.8 0"></path>
+                        </svg>
+                        Reflections
+                    </a>
+                </nav>
+            </div>
+        </div>
+    </header>
 
-<header>
-    <h1>Travel History and Analysis</h1>
-</header>
+    <main class="container">
+        <div class="use-case fade-in">
+            <h2>Description</h2>
+            <p>This use case focuses on tracking and analyzing users' travel history. The application logs travel data, enabling users to review past routes and patterns for enhanced safety and efficiency. These insights help users make informed decisions about future travel habits.</p>
+        </div>
 
-<div class="container">
-    <div class="use-case">
-        <h2>Description</h2>
-        <p>This use case focuses on tracking and analyzing users' travel history. The application logs travel data, enabling users to review past routes and patterns for enhanced safety and efficiency. These insights help users make informed decisions about future travel habits.</p>
-    </div>
+        <div class="use-case fade-in">
+            <h2>Key Features</h2>
+            <p><strong>Data Storage:</strong> Travel history is stored securely in external files for future reference.</p>
+            <p><strong>Analysis:</strong> Users can analyze their travel history to identify trends, such as number of times a path is travelled.</p>
+        </div>
 
-    <div class="use-case">
-        <h2>Key Features</h2>
-        <p><strong>Data Storage:</strong> Travel history is stored securely in external files for future reference.</p>
-        <p><strong>Analysis:</strong> Users can analyze their travel history to identify trends, such as number of times a path is travelled.</p>
-    </div>
+        <div class="use-case fade-in">
+            <h2>Concept Used</h2>
+            <p><strong>File System:</strong> We use (fstream) file handling. Organizes travel logs into structured files for long-term storage and retrieval.</p>
+        </div>
 
-    <div class="use-case">
-        <h2>Concept Used</h2>
-        <p><strong>File System:</strong> We use ( fstream ) file handeling.Organizes travel logs into structured files for long-term storage and retrieval.</p>
-    </div>
+        <div class="use-case fade-in">
+            <h2>Benefits</h2>
+            <p>Helps users optimize their travel routines for safety and efficiency.</p>
+            <p>Provides actionable insights into travel habits and trends.</p>
+            <p>Supports long-term planning by identifying frequently traveled routes and peak travel times.</p>
+        </div>
+    </main>
 
- 
-    <div class="use-case">
-        <h2>Benefits</h2>
-        <p>Helps users optimize their travel routines for safety and efficiency.</p>
-        <p>Provides actionable insights into travel habits and trends.</p>
-        <p>Supports long-term planning by identifying frequently traveled routes and peak travel times.</p>
-    </div>
-</div>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Travel History and Analysis. All Rights Reserved. | <a href="#">Contact Us</a></p>
+        </div>
+    </footer>
 
-<footer>
-    <p>&copy; 2025 Travel History and Analysis. All Rights Reserved. | <a href="#">Contact Us</a></p>
-</footer>
+    <script>
+        // Header scroll functionality
+        let lastScroll = 0;
+        const header = document.querySelector('.main-header');
 
+        window.addEventListener('scroll', () => {
+            const currentScroll = window.pageYOffset;
+
+            if (currentScroll <= 0) {
+                header.style.transform = 'translateY(0)';
+                header.style.background = 'rgba(30, 39, 46, 0.95)';
+            } else if (currentScroll > lastScroll) {
+                header.style.transform = 'translateY(-100%)';
+            } else {
+                header.style.transform = 'translateY(0)';
+                header.style.background = 'rgba(30, 39, 46, 0.98)';
+            }
+            lastScroll = currentScroll;
+        });
+
+        // Add fade-in animation to elements
+        document.addEventListener('DOMContentLoaded', () => {
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.style.opacity = '1';
+                        entry.target.style.transform = 'translateY(0)';
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, {
+                threshold: 0.1
+            });
+
+            document.querySelectorAll('.fade-in').forEach(el => {
+                observer.observe(el);
+            });
+        });
+    </script>
 </body>
 </html>
