--- a/businesscases.html
+++ b/businesscases.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Use Cases</title>
   <style>
-        /* Base Styles */
         :root {
             --primary: #2d3436;
             --secondary: #0984e3;
@@ -25,7 +24,6 @@
         }
 
         body {
-            margin: 0;
             font-family: 'Inter', system-ui, sans-serif;
             color: var(--text-primary);
             background-color: var(--background);
@@ -41,7 +39,6 @@
             top: 0;
             z-index: 100;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s ease;
         }
 
         .container {
@@ -67,11 +64,6 @@
             transition: transform 0.3s ease;
         }
 
-        .logo:hover {
-            transform: scale(1.05);
-        }
-
-        /* Navigation */
         .main-nav {
             display: flex;
             gap: 2rem;
@@ -94,123 +86,115 @@
             transform: translateY(-2px);
         }
 
-        .icon {
-            width: 20px;
-            height: 20px;
+        /* Hero Section */
+        .hero {
+            padding: 8rem 0 4rem;
+            text-align: center;
+            background: linear-gradient(135deg, rgba(108, 92, 231, 0.1), rgba(0, 206, 201, 0.1));
         }
 
-        /* Main Content */
-        main {
-            padding-top: 100px;
+        .hero h1 {
+            font-size: 3.5rem;
+            margin-bottom: 1.5rem;
+            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        /* Use Case Styles */
-        .use-case {
+        .hero p {
+            font-size: 1.2rem;
+            color: var(--text-secondary);
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* Overview Section */
+        .overview-section {
+            padding: 4rem 0;
+            background: var(--card-bg);
+            margin: 2rem 0;
+            border-radius: 16px;
+        }
+
+        .features-list {
+            list-style: none;
+            padding: 2rem;
+        }
+
+        .features-list li {
+            margin-bottom: 1rem;
+            padding-left: 1.5rem;
+            position: relative;
+        }
+
+        .features-list li::before {
+            content: "→";
+            position: absolute;
+            left: 0;
+            color: var(--accent);
+        }
+
+        /* Team Grid */
+        .team-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            padding: 2rem 0;
+        }
+
+        .team-member {
             background: var(--card-bg);
             border-radius: 16px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            position: relative;
-        }
-
-         main {
-            padding-top: 120px; /* Increased padding to account for fixed header */
-        }
-
-        /* Update use-case styles */
-        .use-case {
-            margin-top: 20px;
-        }
-        .use-case-content {
-            flex: 1;
-            margin-bottom: 2rem;
-        }
-
-        .btn-wrapper {
-            text-align: center;
-            margin-top: auto;
-            padding-top: 1rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 0.8rem 2rem;
-            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
-            color: var(--text-primary);
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: 500;
-            letter-spacing: 0.5px;
-            position: relative;
             overflow: hidden;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .btn:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg, var(--gradient-end), var(--gradient-start));
-            opacity: 0;
-            transition: opacity 0.3s ease;
+        .team-member:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
         }
 
-        .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 16px rgba(108, 92, 231, 0.4);
+        .team-member-link {
+            text-decoration: none;
+            color: inherit;
         }
 
-        .btn:hover:before {
-            opacity: 1;
+        .team-member-content {
+            padding: 2rem;
+            background: linear-gradient(135deg, rgba(108, 92, 231, 0.1), rgba(0, 206, 201, 0.1));
         }
 
-        .btn span {
-            position: relative;
-            z-index: 1;
-        }
-
-        .use-case h2 {
-            color: var(--text-primary);
+        .team-member h4 {
+            font-size: 1.5rem;
             margin-bottom: 1rem;
+            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        .use-case .sdg {
+        .team-member p {
             color: var(--text-secondary);
-            margin-bottom: 1.5rem;
+            margin: 0.5rem 0;
         }
 
-        .use-case strong {
-            color: var(--accent);
-            display: block;
-            margin-bottom: 0.5rem;
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .fade-in {
-            animation: fadeIn 0.6s ease forwards;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            animation: fadeIn 1s ease-out forwards;
         }
 
         @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2.5rem;
+            }
+            
             .header-content {
                 flex-direction: column;
                 gap: 1rem;
