--- a/businesscases.html
+++ b/businesscases.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Use Cases</title>
-  <style>
+    <style>
+        /* Base Styles */
         :root {
             --primary: #2d3436;
             --secondary: #0984e3;
@@ -24,10 +25,17 @@
         }
 
         body {
+            margin: 0;
             font-family: 'Inter', system-ui, sans-serif;
             color: var(--text-primary);
             background-color: var(--background);
             line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
         }
 
         /* Header Styles */
@@ -39,12 +47,7 @@
             top: 0;
             z-index: 100;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
+            transition: all 0.3s ease;
         }
 
         .header-content {
@@ -64,6 +67,11 @@
             transition: transform 0.3s ease;
         }
 
+        .logo:hover {
+            transform: scale(1.05);
+        }
+
+        /* Navigation */
         .main-nav {
             display: flex;
             gap: 2rem;
@@ -86,11 +94,15 @@
             transform: translateY(-2px);
         }
 
+        .icon {
+            width: 20px;
+            height: 20px;
+        }
+
         /* Hero Section */
         .hero {
             padding: 8rem 0 4rem;
             text-align: center;
-            background: linear-gradient(135deg, rgba(108, 92, 231, 0.1), rgba(0, 206, 201, 0.1));
         }
 
         .hero h1 {
@@ -105,96 +117,78 @@
         .hero p {
             font-size: 1.2rem;
             color: var(--text-secondary);
-            max-width: 800px;
+            max-width: 600px;
             margin: 0 auto;
         }
 
-        /* Overview Section */
-        .overview-section {
-            padding: 4rem 0;
-            background: var(--card-bg);
-            margin: 2rem 0;
-            border-radius: 16px;
-        }
-
-        .features-list {
-            list-style: none;
-            padding: 2rem;
-        }
-
-        .features-list li {
-            margin-bottom: 1rem;
-            padding-left: 1.5rem;
-            position: relative;
-        }
-
-        .features-list li::before {
-            content: "→";
-            position: absolute;
-            left: 0;
-            color: var(--accent);
-        }
-
-        /* Team Grid */
-        .team-grid {
+        /* Use Cases Grid */
+        .use-cases-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 2rem;
             padding: 2rem 0;
         }
 
-        .team-member {
+        .case-card {
             background: var(--card-bg);
             border-radius: 16px;
-            overflow: hidden;
-            transition: all 0.3s ease;
+            padding: 1.5rem;
+            text-decoration: none;
+            color: var(--text-primary);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .team-member:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        .case-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 48px rgba(0, 0, 0, 0.2);
         }
 
-        .team-member-link {
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .team-member-content {
-            padding: 2rem;
-            background: linear-gradient(135deg, rgba(108, 92, 231, 0.1), rgba(0, 206, 201, 0.1));
-        }
-
-        .team-member h4 {
+        .case-card h2 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: var(--accent);
         }
 
-        .team-member p {
+        .case-card ul {
+            list-style: none;
+            padding-left: 1rem;
+        }
+
+        .case-card li {
             color: var(--text-secondary);
-            margin: 0.5rem 0;
+            margin-bottom: 0.5rem;
+            position: relative;
+            padding-left: 1.5rem;
+        }
+
+        .case-card li::before {
+            content: "→";
+            position: absolute;
+            left: 0;
+            color: var(--accent);
+            opacity: 0.7;
         }
 
         /* Animations */
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .fade-in {
-            animation: fadeIn 1s ease-out forwards;
+            animation: fadeIn 0.6s ease-out forwards;
         }
 
+        /* Responsive Design */
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-            
             .header-content {
                 flex-direction: column;
                 gap: 1rem;
@@ -204,11 +198,15 @@
                 flex-wrap: wrap;
                 justify-content: center;
             }
+            
+            .hero h1 {
+                font-size: 2.5rem;
+            }
         }
     </style>
 </head>
 <body>
-  <header class="main-header">
+    <header class="main-header">
         <div class="container">
             <div class="header-content">
                 <h1 class="logo">TEAM 4</h1>
