--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -206,12 +206,12 @@
             }
         }
     </style>
-    <!-- Update the navigation section --><header class="main-header">
+    <header class="main-header">
         <div class="container">
             <div class="header-content">
                 <h1 class="logo">TEAM 4</h1>
                 <nav class="main-nav">
-                    <a href="https://github.com/sachidanand-A/urban_navigation_and_safety-/blob/main" class="nav-link">
+                    <a href="https://github.com/sachidanand-A/urban_navigation_and_safety-/tree/main" class="nav-link">
                         <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                         </svg>
@@ -234,7 +234,6 @@
                         </svg>
                         Use Cases
                     </a>
-                                      </a>
                     <a href="reflections_team.html" class="nav-link">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M15 14c.2-1 .7-1.7 1.5-2.5M9 14c-.2-1-.7-1.7-1.5-2.5M6 9h.01M18 9h.01"></path>
@@ -247,11 +246,6 @@
             </div>
         </div>
     </header>
-                </nav>
-            </div>
-        </div>
-    </header>
-</head>
 <body>
    <!-- Update the navigation section -->
 
