--- a/refections_sachidanand.html
+++ b/refections_sachidanand.html
@@ -344,6 +344,91 @@
                 </tr>
             </table>
         </section>
+           <section class="card fade-in">
+                <h2 class="section-title gradient-text">Algorithmic Concepts</h2>
+                <ul class="feature-list concepts-list">
+                    <li>
+                        <strong>Decomposition:</strong> 
+                        Breaks a large problem into smaller sub-problems, making it easier to manage and solve. Applied in zombie child detection (Lab 1).
+                    </li>
+                    <li>
+                        <strong>Pattern Recognition:</strong>
+                        Identifies recurring patterns to generalize solutions. Demonstrated in representation system activity and Forts of India portfolio.
+                    </li>
+                    <li>
+                        <strong>Abstraction:</strong>
+                        Simplifies problems by focusing on key features. Used in shapes and sizes activity and Guernica abstract model.
+                    </li>
+                    <li>
+                        <strong>Brave and Cautious Travel:</strong>
+                        Graph traversal methods - DFS (Brave) and BFS (Cautious).
+                    </li>
+                    <li>
+                        <strong>Pruning:</strong>
+                        Eliminates irrelevant parts to improve efficiency. Used in N-Queens and subset generation.
+                    </li>
+                    <li>
+                        <strong>Lazy Propagation:</strong>
+                        Optimizes performance by delaying updates in segment trees.
+                    </li>
+                    <li>
+                        <strong>Sliding Window:</strong>
+                        Maintains relevant information within a moving window for sub-array problems.
+                    </li>
+                    <li>
+                        <strong>Level Order Traversal:</strong>
+                        Systematically visits nodes level by level in BFS.
+                    </li>
+                    <li>
+                        <strong>Hierarchical Data:</strong>
+                        Organizes data in parent-child tree structures.
+                    </li>
+                    <li>
+                        <strong>Edge Relaxation:</strong>
+                        Updates shortest path distances in Dijkstra's algorithm.
+                    </li>
+                    <li>
+                        <strong>Balancing and Rotations:</strong>
+                        Maintains efficiency in AVL trees through rotations.
+                    </li>
+                    <li>
+                        <strong>Kleene Closure:</strong>
+                        Addresses transitivity in graph theory for connected components.
+                    </li>
+                    <li>
+                        <strong>Pre-Computing:</strong>
+                        Enhances performance by pre-calculating frequently used values.
+                    </li>
+                    <li>
+                        <strong>Parental Dominance:</strong>
+                        Enforces hierarchical relationships in heap structures.
+                    </li>
+                    <li>
+                        <strong>Prefix and Suffix:</strong>
+                        Used in text processing and pattern matching.
+                    </li>
+                    <li>
+                        <strong>Partitioning:</strong>
+                        Divides problems into smaller sub-problems for sorting and graphs.
+                    </li>
+                    <li>
+                        <strong>Bit Manipulations:</strong>
+                        Optimizes computations through binary operations.
+                    </li>
+                    <li>
+                        <strong>Memoization:</strong>
+                        Stores previous results to avoid redundant computations.
+                    </li>
+                    <li>
+                        <strong>Invariants:</strong>
+                        Maintains constant conditions during computations.
+                    </li>
+                    <li>
+                        <strong>Shortest Path Trees:</strong>
+                        Shows optimal paths from source to all points.
+                    </li>
+                </ul>
+            </section>
 
         <section class="section">
             <h2>Practical Applications</h2>
